# rumblr

./: BUILD.md  README.md  package-lock.json  package.json
release/: KNOWN_ISSUES.md  README.md
scripts/: connection-soak-tests.mjs  regression-tests.mjs
src/: index.html  main.js  styles.css  utils.js  youtube-player.css  youtube-player.html  youtube-player.js
src-tauri/: Cargo.toml  settings.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands_config.rs  config.rs  dcc.rs  irc_connection.rs  irc_events.rs  irc_handlers.rs  irc_numeric.rs  irc_outbound.rs  irc_registration.rs  irc_status.rs  irc_support.rs  lib.rs  logging.rs  macos_activity.rs  main.rs  media.rs  models.rs  text.rs  windows.rs
src/core/: boot.js  buffers.js  config-applier.js  config-store.js  network-state.js  performance.js  persistence.js  state.js  tauri.js
src/services/: irc.js  media.js  typing.js
src/styles/: attention-center.css  base.css  buffer-switcher.css  channel-browser.css  chat.css  media.css  message-popup.css  messages.css  modals.css  onboarding.css  premium-surfaces.css  settings.css  sidebar.css  themes.css  youtube-popout.css
src/ui/: attention-center.js  avatar.js  buffer-switcher.js  channel-browser.js  composer.js  context-menu.js  dcc.js  dom.js  message-content.js  message-popup.js  messages-window.js  messages.js  modals.js  onboarding.js  sidebar.js  ui-engine.js  youtube-popout.js
