[package]
name = "rumblr"
version = "0.1.0-alpha"
description = "Modern IRC Client"
authors = ["you"]
edition = "2021"
build = "build.rs"

[lib]
name = "rumblr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
objc2-foundation = { version = "0.3.2", features = ["NSObject", "NSProcessInfo", "NSString"] }

tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
irc = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
window-vibrancy = "0.7.1"
chrono = "0.4"
native-tls = "0.2"
tokio-native-tls = "0.3"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.19"
